--- a/hello.html
+++ b/hello.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>hello world!</h1>
-    <2>This is Alwyn!</h2>
+    <h2>This is Alwyn!</h2>
     <p>Hello there!</p>
 
 </body>
